--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
-    "haversine": "^1.1.1"
+    "haversine": "^1.1.1",
+    "yargs": "^16.2.0"
   }
 }
